--- a/public/static/style.css
+++ b/public/static/style.css
@@ -1,4 +1,4 @@
-body {
+body.custom-background {
     font-family:"AtlantisInternational", sans-serif;
     background-color:#000;
     font-size:20px;
@@ -12,5 +12,53 @@ footer {
 
 @font-face {
     font-family:'AtlantisInternational';
-    src:url("public/static/fonts/AtlantisInternational-jen0.ttf");
+    src:url("fonts/AtlantisInternational-jen0.ttf");
+}
+
+/**/
+.terminal {
+    margin-top:40px;
+    border-radius:20px;
+    width:600px;
+    height:300px;
+    background-color:#111111;
+    color:#fff;
+    font-family:"AtlantisInternational";
+    padding: 10px;
+    overflow-y: hidden;
+}
+
+#navPartial {
+    height: 90px;
+}
+
+.card-title {
+    font-size: 40px;
+    font-family:"AtlantisInternational";
+}
+
+#q01, #q02 {
+    padding-left: 150px;
+    font-weight: bold;
+    font-stretch: wider;
+    font-size: 40px;
+    color: #fff;
+}
+
+#paragraph_aboutMe, #paragraph_aboutMe_02 {
+    width: 900px;
+    line-height: 50px;
+    text-align: justify;
+    font-size: 1.5em;
+    color: #ccccc6;
+}
+
+#paragraph {
+    width: 900px;
+    line-height: 50px;
+    text-align: justify;
+}
+
+#carouselExampleFade {
+    margin-top: 70px;
 }
